<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewTransactionActivity">

    <TextView
            android:text="@string/transactionTotal_DynamicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/transactionTotal_DynamicText" android:textSize="30sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.501" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/transactionTotal_StaticText"/>
    <TextView
            android:text="@string/transactionTotal_StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/transactionTotal_StaticText"
            app:fontFamily="sans-serif" android:typeface="normal" android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.502"
            android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/completeTransaction_Button"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/addTransactionItemButton_Text"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:id="@+id/addTransactionItem_Button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:textAllCaps="false"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onAddItemToTransaction"/>
    <ScrollView
            android:layout_width="344dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/addTransactionItem_Button"
            android:id="@+id/transactionTable_ScrollView"
            app:layout_constraintTop_toBottomOf="@+id/transactionFrequency_RadioGroup" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/transactionTable_ScrollView"
                app:layout_constraintBottom_toBottomOf="@+id/transactionTable_ScrollView"
                app:layout_constraintStart_toStartOf="@+id/transactionTable_ScrollView"
                app:layout_constraintEnd_toEndOf="@+id/transactionTable_ScrollView" android:orientation="vertical"
                android:id="@+id/transactionItems_Table">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/transactionTable_HeaderRow" tools:layout_editor_absoluteY="278dp"
                    tools:layout_editor_absoluteX="8dp" android:gravity="top">
                <TextView
                        android:layout_width="186dp"
                        android:layout_height="match_parent"
                        android:id="@+id/headerRowColumn_Name"
                        android:layout_margin="2dp"
                        android:background="#e5e5e5"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:text="@string/itemColumnHeader_ItemTable"/>
                <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:id="@+id/headerRowColumn_Quantity"
                        android:layout_margin="2dp"
                        android:background="#e5e5e5"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:text="@string/quantityColumnHeader_ItemTable"/>
                <TextView
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:id="@+id/headerRowColumn_Value"
                        android:layout_margin="2dp"
                        android:background="#e5e5e5"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:text="@string/valueColumnHeader_ItemTable"/>
                <TextView
                        android:layout_width="18dp"
                        android:layout_height="match_parent"
                        android:id="@+id/headerRowColumn_RemoveButton"
                        android:layout_margin="2dp"
                        android:background="#e5e5e5"
                        android:text=""/>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/transactionFrequency_RadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:checkedButton="@+id/onceTransaction_RadioButton">
        <RadioButton
                android:text="@string/onceRadioButton_Text"
                android:layout_width="82dp"
                android:layout_height="48dp" android:id="@+id/onceTransaction_RadioButton" android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:checked="false" android:textAllCaps="false"/>
        <RadioButton
                android:text="@string/dailyRadioButton_Text"
                android:layout_width="82dp"
                android:layout_height="48dp" android:id="@+id/dailyTransaction_RadioButton" android:layout_weight="1"
                android:checked="false"/>
        <RadioButton
                android:text="@string/weeklyRadioButton_Text"
                android:layout_width="82dp"
                android:layout_height="48dp" android:id="@+id/weeklyTransaction_RadioButton" android:layout_weight="1"
                android:checked="false"/>
        <RadioButton
                android:text="@string/monthlyRadioButton_Text"
                android:layout_width="82dp"
                android:layout_height="48dp" android:id="@+id/monthlyTransaction_RadioButton"
                android:layout_weight="1" android:checked="false"/>
    </RadioGroup>
    <TextView
            android:text="@string/transactionFrequency_StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/setTransactionDate_Button" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/transactionDate_DatePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/setTransactionDate_Button"
            app:layout_constraintTop_toBottomOf="@+id/transactionTotal_DynamicText"
            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintVertical_bias="0.208"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textAllCaps="false"/>
    <Button
            android:text="@string/completeTransactionButton_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/completeTransaction_Button"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>