<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="25dp">

    <TextView
            android:text="@string/balanceStatic_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/balance_StaticText"
            app:fontFamily="sans-serif" android:typeface="normal" android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/balance_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/balance_DynamicText" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/balance_StaticText"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/incomeBtn_Text"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/income_Button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:maxLines="2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/balance_DynamicText"/>
    <Button
            android:text="@string/expenditureBtn_Text"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/expenditure_Button"
            android:layout_marginTop="24dp"
            android:maxLines="2"
            app:layout_constraintTop_toBottomOf="@+id/balance_DynamicText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="142dp" android:id="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="178dp"/>
    <Button
            android:text="@string/newTransactionBtn_Text"
            android:layout_width="296dp"
            android:layout_height="80dp"
            android:id="@+id/newTransaction_Button"
            app:layout_constraintTop_toBottomOf="@+id/income_Button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            style="@style/Widget.AppCompat.Button.Colored" android:onClick="onNewTransaction"/>
</android.support.constraint.ConstraintLayout>